# MagicSquare_xx

./: .cursorrules  README.md  pyproject.toml
.cursor/commands/: export.md  golden-master.md  green-minimal.md  red-skeleton.md  red-test-plan.md  refactor-safe.md  refactor-smell.md  tdd-red.md
.cursor/skills/magic-square-docs/: SKILL.md  phase-checklist.md  report-template.md  transcript-template.md
Prompt/: 07_역할분리-MomTest-시뮬레이션-프롬프트.md  08_MagicSquare_1004-세션3-워크북-프롬프트.md
Prompting/: 02_MagicSquare_1004-세션3-워크북-프롬프트.md  03_validate_lines-R-G-I-O-정합성-확인-프롬프트.md  04_ARRR-TDD-Command-Skill-체인-프롬프트.md  05_PRD-Traceability-RED-테스트-플랜-프롬프트.md  06_validate_lines-GREEN-Golden-Master-프롬프트.md  07_PyQt-validate_lines-GUI-데모-프롬프트.md  07_역할분리-MomTest-시뮬레이션-프롬프트.md  08_entity-line-Dual-Track-리팩터-프롬프트.md  cursor_mom_test_workbook_discussion.md
Report/: 01_역할분리-MomTest-시뮬레이션-보고서.md  02_MagicSquare_1004-세션3-워크북-보고서.md  03_validate_lines-R-G-I-O-정합성-확인-보고서.md  04_ARRR-TDD-Command-Skill-체인-보고서.md  05_PRD-Traceability-RED-테스트-플랜-보고서.md  06_4x4-마방진-MomTest-인터뷰-보고서.md  06_validate_lines-GREEN-Golden-Master-보고서.md  07_PyQt-validate_lines-GUI-데모-보고서.md  08_MagicSquare_1004-세션3-워크북-보고서.md  08_entity-line-Dual-Track-리팩터-보고서.md
docs/: PRD.md
gui/: __init__.py  demo.py
src/: constants.py  validate_lines.py
src/entity/: line.py  line_logic.py  serialize.py
tests/: _approval.py  conftest.py  test_entity_line.py  test_validate_lines.py
tests/golden/: T-BND-003.approved.txt  T-BND-004.approved.txt  T-LOG-001.approved.txt  T-LOG-002.approved.txt
(+1 files in other folders)
